add: transcript service implementation